--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "daisyui": "^2.51.4",
+    "date-fns": "^2.29.3",
     "flowbite": "^1.6.4",
     "framer-motion": "^10.12.2",
     "react": "^18.2.0",
