--- a/backend/package.json
+++ b/backend/package.json
@@ -7,21 +7,25 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "socket.io": "^4.6.1",
-    "ts-node": "^10.9.1"
+    "mongodb": "^5.2.0",
+    "socket.io": "^4.6.1"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.ts",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.3",
+    "@types/node": "^18.15.11",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
