[minor]: changes in package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
@@ -29,7 +32,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm ./index.ts"
+    "start": "node index.ts"
   },
   "keywords": [],
   "author": "",
