--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.3.0",
     "socket.io": "^4.6.1"
   },
@@ -16,8 +16,9 @@
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
+  "type": "commonjs",
   "engines": {
-    "node": "14.x"
+    "node": "18.x"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -32,7 +33,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.ts"
+    "start": "node --loader ts-node/esm app/index.ts"
   },
   "keywords": [],
   "author": "",
