--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.9.0",
     "socket.io-client": "^4.6.1"
   },
